FIX reverted logo size to fix vertical align of menu

--- a/prototype/HTML/css/style.css
+++ b/prototype/HTML/css/style.css
@@ -58,7 +58,7 @@ header {
 	float: right;
 }
 
-#logo img { margin-top: 24px; height: 60px;}
+#logo img { margin-top: 24px; height: 41px;}
 
 
 /* Full-Width Header Styles */
